--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Abstract:
 This software is the Cognitive Model part of the CONCEPT project from the University of Plymouth.
 The team involves :
 
-- Dr tony Belpaeme, Supervisor
+- Dr Tony Belpaeme, supervisor
 - Frederic Delaunay, human-robot interaction
 - Joachim De Greeff, conceptual modeling
 
