--- a/README
+++ b/README
@@ -6,7 +6,7 @@ The team involves :
 
 - Dr Tony Belpaeme, supervisor
 - Frederic Delaunay, human-robot interaction
-- Joachim De Greeff, conceptual modeling
+- Joachim de Greeff, conceptual modeling
 
 The project is expected to end around oct. 2011.
 In the meantime, you are welcomed to try the software and submit bugfixes.
